fix: update blog URL

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a href="contact.html">Contact</a></li>
           <li>
             <a
-              href="https://negarbaharmand.com"
+              href="https://negarbaharmand.netlify.app/"
               target="_blank"
               class="blog-link"
             >
