--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li>
             <a
               href="https://negarbaharmand.netlify.app/"
-              target="_blank"
+              target="_self"
               class="blog-link"
             >
               Blog <i class="fas fa-external-link-alt"></i>
