Update blog link URL

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
           <li><a href="contact.html" class="active">Contact</a></li>
           <li>
             <a
-              href="https://negarbaharmand.com"
+              href="https://negarbaharmand.netlify.app/"
               target="_blank"
               class="blog-link"
             >
