--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
           <li><a href="contact.html">Contact</a></li>
           <li>
             <a
-              href="https://negarbaharmand.com"
+              href="https://negarbaharmand.netlify.app/"
               target="_blank"
               class="blog-link"
             >
